err/pyble.err
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ble'...
Compiling './lib/python3.5/site-packages/ble/ble_gatthelper.py'...
***   File "./lib/python3.5/site-packages/ble/ble_gatthelper.py", line 124
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ble/ble_parser.py'...
***   File "./lib/python3.5/site-packages/ble/ble_parser.py", line 178
    print data.encode('hex')
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ble/bluetooth.py'...
***   File "./lib/python3.5/site-packages/ble/bluetooth.py", line 177
    print "Port is set to %s" % self.port
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ble/utils.py'...
***   File "./lib/python3.5/site-packages/ble/utils.py", line 101
    def printOutput((packet, dictionary)):
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyble-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/samples'...
Compiling './lib/python3.5/site-packages/samples/testBluetooth.py'...
***   File "./lib/python3.5/site-packages/samples/testBluetooth.py", line 20
    print "Device: %s\t RSSI: %s\t Data: %s" % (devAddr[1], devRSSI, Data[1])
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
